# openair-spgwu-tiny

./: .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README.txt
ci-scripts/: Dockerfile.centos8  Dockerfile.ubuntu18.04  Jenkinsfile-GitHub-Docker  README.txt  checkCodingFormattingRules.sh  flatten_image.py  generateConfigFiles.py  generateHtmlReport.py  sanityCheckDeploy.py  verifySanityCheckDeployment.py
ci-scripts/docker/: Dockerfile.ci.clang-format  Dockerfile.ci.cppcheck
docker/: Dockerfile.centos8  Dockerfile.debug.centos8  Dockerfile.debug.centos8.3dparty  Dockerfile.rhel8  Dockerfile.rhel8-2.oc4-4  Dockerfile.rocky8  Dockerfile.ubuntu  Dockerfile.ubuntu18.04
docs/: FEATURE_SET.md  FEATURE_SET_PGW.md
etc/: README.md  spgw_u.conf  upf.conf
openshift/: README.md  bc-base-builder.yaml  bc-dev.yaml  bc-target.yaml  build-config.debug.centos8.3dparty.yml  build-config.debug.centos8.yml  build_image.debug.centos8  build_image.debug.centos8.3dparty  image-stream.debug.centos8.3dparty.yml  image-stream.debug.centos8.yml  is-base.yml  is-dev.yml  is-target.yml  oai-spgwu-tiny-build-config.yml  oai-spgwu-tiny-image-stream.yml
scripts/: entrypoint.py  entrypoint.sh  healthcheck.sh
src/common/: 3gpp_23.003.h  3gpp_24.008.h  3gpp_29.500.h  3gpp_29.510.h  CMakeLists.txt  logger.cpp  logger.hpp
src/common/msg/: itti_msg_nrf.hpp  itti_msg_sxab.hpp
src/common/utils/: 3gpp_conversions.cpp  3gpp_conversions.hpp  CMakeLists.txt  async_shell_cmd.cpp  fqdn.cpp  pid_file.cpp  thread_sched.cpp  thread_sched.hpp
src/gtpv1u/: CMakeLists.txt  gtpu.h  gtpv1u.cpp  gtpv1u.hpp
src/gtpv2c/: 3gpp_29.274.cpp  3gpp_29.274.hpp  CMakeLists.txt  gtpv2c.cpp
src/itti/: itti_msg.hpp
src/oai_spgwu/: CMakeLists.txt  main.cpp  rest_handler.h
src/oai_upf/: CMakeLists.txt  main.cpp
src/pfcp/: 3gpp_29.244.hpp  CMakeLists.txt  pfcp.cpp
src/spgwu/: CMakeLists.txt  spgwu_app.cpp  spgwu_config.cpp  spgwu_config.hpp  spgwu_nrf.cpp  spgwu_nrf.hpp  spgwu_pfcp_association.cpp  spgwu_profile.cpp  spgwu_profile.hpp  spgwu_sx.cpp  spgwu_sx.hpp  upf_app.cpp  upf_app.hpp  upf_config.cpp  upf_config.hpp  upf_n4.cpp  upf_n4.hpp  upf_nrf.cpp  upf_nrf.hpp  upf_pfcp_association.cpp  upf_pfcp_association.hpp  upf_profile.cpp  upf_profile.hpp
src/spgwu/simpleswitch/: CMakeLists.txt  pfcp_far.cpp  pfcp_far.hpp  pfcp_pdr.cpp  pfcp_session.cpp  pfcp_session.hpp  pfcp_switch.cpp  pfcp_switch.hpp  simple_switch.cpp  simple_switch.hpp  spgwu_s1u.cpp  spgwu_s1u.hpp
src/udp/: CMakeLists.txt  udp.cpp  udp.hpp
src/upf/: CMakeLists.txt
src/upf/bpf/: CMakeLists.txt  xdp_stats_kern.h
src/upf/bpf/ie/: teid.h
src/upf/oai/: CMakeLists.txt
src/upf/utils/: CMakeLists.txt
src/upf_app/: CMakeLists.txt  Configuration.cpp
src/upf_app/bpf/: CMakeLists.txt
src/upf_app/include/: linux
src/upf_app/oai/: CMakeLists.txt
src/upf_app/oai/pfcp/: pfcp_pdr.cpp  pfcp_session.cpp
src/upf_app/skel/: far_bpf_skel.h  session_bpf_skel.h  upf_xdp_bpf_skel.h
